packages/flowi/flowi-0.5.13.tar.gz/flowi-0.5.13/docs/minio/minio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
  namespace: flowi
spec:
  hosts:
  - "storage.flowi.cloud"
  gateways:
  - flowi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: minio-console
